# leankernel

./: example.ipynb  kernel.json  pyproject.toml  readme.md  setup.py
leankernel/: __main__.py  leankernel.py
leankernel/lean/: kernel.json
