[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "leankernel"
authors = [
    {name =  "Miguel Angel Marco Buzunariz", email = "mmarco@unizar.es"},
]
description = "Jupyter kernel for lean"
readme = "readme.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "ipykernel",
    "pexpect",
]
version = "0.0.1"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
